# paint_by_numbers

./: README.md  justfile  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/monk/image/transformer/: MainActivity.kt
android/app/src/profile/: AndroidManifest.xml
image_crate/: Cargo.toml
image_crate/image_crate.xcodeproj/: project.pbxproj
image_crate/image_crate.xcodeproj/xcuserdata/mansursegmen.xcuserdatad/xcschemes/: xcschememanagement.plist
image_crate/src/: api.rs  bridge_generated.rs
ios/Runner/: Info.plist  Runner-Bridging-Header.h  bridge_generated.h
ios/Runner.xcodeproj/: project.pbxproj
ios/Runner.xcworkspace/: contents.xcworkspacedata
lib/: bridge_generated copy.dart  bridge_generated.dart  main.dart
lib/app/view/: app.dart
lib/random_image/bloc/: random_image_bloc.dart  random_image_event.dart  random_image_state.dart
lib/random_image/view/: random_image_page.dart  view.dart
lib/utils/: image_utils.dart
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native/: Cargo.toml
native/src/: api.rs  bridge_generated.rs
test/: widget_test.dart
web/: manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc
